document structure and wePorter chapter start

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1,3 +1,6 @@
+
+
+
 \documentclass[11pt, a4paper]{report}
 \usepackage[margin=3cm]{geometry}
 %\usepackage[margin=4cm]{geometry}
@@ -38,8 +41,7 @@
 \usepackage{fancyhdr}
 \usepackage{subfig}
 
-%\usepackage{hyperref} %TODO no borders!
-%\hypersetup{plainpages=false}
+% \usepackage[plainpages=false]{hyperref}
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 \DeclareMathOperator*{\argmin}{arg\,min}
