--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -1,2 +1,20 @@
 \section{Acknowledgements} 
 \label{sec:acknowledgements}
+
+I would like to thank a number of people who've been instrumental in the development of this thesis and my own development along the way.
+
+My supervisor Marian Ursu for providing focus by asking the right questions every time again.
+
+`her Smallness' Lucia for her never-ending positive support during the structuring of our ideas.
+
+Louise for keeping me up late with great music from all over the world.
+
+The people together with whom we made `Picnic' an inclusive, friendly & safe community, for sharing their knowledge and enthusiasm to make things happen.
+
+Simone for being a truly nourishing host and dear partner in life and crime during my stay in beautiful Rennes les Baines, where much foundational work for this research was done.
+
+Jan and Pim for bringing out the best in me, no matter how many kilometers our relation spans.
+
+Goldsmiths with her unconventional Department of Computing for showing me the creative side of Computer Science and letting me bring together my passions for AI and video.
+
+
