added quotes, deleted old dissertation.tex, changed ch title meaning in video

--- a/tex/main/weporter.tex
+++ b/tex/main/weporter.tex
@@ -55,6 +55,10 @@ differences:
 
 \section{Analysis of the wePorter System}
 
+\subsection{Storytelling as structured video recommendation}
+
+The wePorter system not only makes it possible to delve into video items to detect local preferences, it also presents her output in a structured way, inherent to the medium of video.
+
 \subsection{The death of the author}
 ref: Barthes - Image music Sound
 here: a lack of clear narrator of the written story
