setup weporter purpose

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -4,4 +4,4 @@
 \input{./tex/main/weporter.tex}
 \input{./tex/main/evaluation.tex}
 \input{./tex/main/discussion.tex}
-\input{./tex/future}
+\input{./tex/main/future}
