--- a/tex/main/storytelling.tex
+++ b/tex/main/storytelling.tex
@@ -1,6 +1,21 @@
 \chapter{Interactive Storytelling: From database to data-based}
-\label{chap:storytelling}
+\label{ch:storytelling}
 \section{Symbolic approaches}
 \label{sec:symbolic}
 \section{Statistic approaches}
 \label{sec:statistic}
+
+\section{Remixing}
+
+The reconfiguration of smaller units that carry meaning within themselves is common practice for textual media such as blogs, where it is easy to quote part of  another author`s writing in a new post [ref]. 
+
+It needs to be said that some reconfiguration of videos is taking place, but even though it often concerns content that was originally sourced online, much of the creative act of remixing happens offline.
+
+
+\subsection{Taking the remix online}
+
+examples like: Aaron Koblin (johnny cash project, exquisite corps, etc)
+
+there is even word of a true remix culture.
+
+the availability of multi-media content via the internet has meant a surge in 
