--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -1,5 +1,5 @@
 \chapter{Human Computation}
-\label{chap:Human Computation}
+\label{ch:Human Computation}
 
 \subsection{The web as platform for creation}
 \label{sec:platform}
