--- a/tex/main/weporter.tex
+++ b/tex/main/weporter.tex
@@ -17,7 +17,63 @@ The astonishing figures of the amount of video that is uploaded to youtube are n
 
 With more and more visual content being put online, there is an increased need for ways of aggregation and filtering. Both of these tasks rely heavily on an understanding of what is presented in these media, which, as we've seen in chapter \ref{ch:quest}, is a hard problem to solve via current computational techniques. With so much content being uploaded, how can we find our way in the already enormous ocean of online videos?
 
+\section{User Generated Video Content}
+
 \section{The Purpose}
+
+Searching -> IR
+With more than an hour of new content per second it is no wonder that youtube has come to be viewed as the go-to for online video, much like  ``the digital video repository for the Internet'' that was envisioined by its founders in their first ever blog post [ref http://youtube-global.blogspot.co.uk/2005/07/greetings-everyone-thanks-for-visiting.html]. An important activity on video platforms like youtube is searching and much attention has been given to different methods of multimedia search and indexing [refs]. Once items have been annotated with tags that reflect the content of a video, items can be presented as search results in response to a textual query.
+
+narrow // broad queries
+A user might visit an online video platform with a specific goal in mind. Reasons to visit might be the wish to see a particular music video or to find an instance of a series by a particular producer. Provided that the desired piece of content exists and the video platform has an appropriate search function in place, these \textit{narrow queries} will result is a result set from which the user is likely to handpick the sought-after result fairly quickly. This user's desired result lies withing a single item of content. Perhaps a few hit and misses are required, but after a couple of clicks the required video is found.
+
+A different scenario emerges when a user approaches a video platform with a more broad and open ended motive. Think for example of someone who wants to know what happened at a large music festival she recently attended, or someone who couldn't make it to a large demonstration and would like to get a sense of the atmosphere. These kind of `broad queries' return a result set of content in which a users will probably consider many item as a succesfull retrieval. Furthermore, one could even say that by traversing the space of different videos in the result set, users interactively construct the answers to their own queries.
+
+This kind of navigation through a space of related content is common practice on large spaces of linked data [ref]. Goal of a person's query here is no longer defined in a single returnable item of content or even a containable set of items. Rather, the sequential pathway through the a set of interesting bits of content is what represents a user's aim. 
+
+The task at hand changes dramatically compared to the more narrow queries that could be answered by a small true positives in an information retrieval task. Users with broad expectations will not only want to be presented with as set of relevant items from a complete repository, they are also looking for the most interesting parts from within these relevant items. This issue is particular to time-based media, and especially relevant for video. Other temporal media, like audio in general and music in particular, have less of a need for segmentation because of  their common usage in multi-media applications. People usually tend to listen to a song entirely and if they which to experience an album in part, constituent songs are already units on their own that can easily be reconfigured.
+
+Because of the raw, unedited nature of the mayority of UGVC [ref yt and the news] it is desireable to establish local recommendations that point to parts within a video content that are of particular interest. Whereas digital music albums shared online consist of a collection of songs that can each easily be made to stand alone, video currently suffers from a less mallable identity online.  Online videos are currently much like black boxes that can be played, paused, rated, commented on, tagged and shared only in its entirety. What if a piece of raw, unedited UGVC features something spectacular for 10 seconds halfway along its timeline, but shows much of the same for the rest of the time?
+
+The distinction to be made, between interesting intervals on one hand and less striking parts of a video on the other is not likely to be a very strict one. Afterall, an unedited video captures a single strech of space and time, so any event that is of particular interest will unlikely have hard cut-off points in time. Rather, if we see interest as a function of time in a particular video, we would expect a somewhat continuous flowing line with spikes every now and then when an iteresting event occurs. 
+
+Looking at interest at a more global level, aggregating over a large group of users, would perhaps even a more smooth landscape of interest. This kind of data could reveal mountains and valleys that can be used for interest-based segmentation. From the thus segmented parts, the ones with high interest score can be returned as the salient parts within a video.
+
+
+This is the purpose of the wePorter system.
+
+
+
+
+Beyond standard information retrieval that finds relevant items from a larger set, there is a need for an extra step of video segmentation 
+
+
+
+
+
+The problem of determining local intervals of interest within a single video is currently hard to solve. Work has been done in automatic video segmentation,
+
+\subsection{looking into a video}
+
+
+
+
+
+
+
+
+
+
+Since the proliferation of mobile video recording devices, it has become common that these kinds of large-scale (semi-)public event are covered in user-generated video content that gets uploaded to the web. 
+
+
+Computer readable  handles for search algorithms. 
+
+
+Vast collections of content, like the one stored at youtube, need indexing for users to be able to navigate the content.  
+
+
+
 
 
 
@@ -25,6 +81,10 @@ With more and more visual content being put online, there is an increased need f
 
 The task at hand: filtering after IR
 more specific: once we have a repositiory that is returned as a search result because of annotations, how can we filter what is most interesting. (intentional ordering?)
+
+preference elicitation
+
+beyond recommendation
 
 
 Idea 1: towards interest based filtering via meaning
@@ -54,10 +114,6 @@ differences:
 
 
 \section{Analysis of the wePorter System}
-
-\subsection{Storytelling as structured video recommendation}
-
-The wePorter system not only makes it possible to delve into video items to detect local preferences, it also presents her output in a structured way, inherent to the medium of video.
 
 \subsection{The death of the author}
 ref: Barthes - Image music Sound
