--- a/tex/title.tex
+++ b/tex/title.tex
@@ -7,13 +7,13 @@
 
 \begin{tabular*}{0.95\textwidth}{@{\extracolsep{\fill}} l c r}
 		&Philo van Kemenade&\\
-		&philovankemenade [at] gmail [dot] com&	
+    % &philovankemenade [at] gmail [dot] com& 
 \end{tabular*}\\[0.3cm]
 
 \vspace{1cm}
 
-Dissertation\\
-MSc. Cognitive Computing\\
+Submitted in partial fulfillment of the requirement of the degree of\\
+\textsc{Master of Science in Cognitive Computing}\\
 
 \vspace{0.5cm}
 
