rough draft section purpose in weporter

--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -1,4 +1,4 @@
-\chapter{Human Computation}
+\chapter{Human Computation towards Visual Meaning}
 \label{ch:Human Computation}
 
 \subsection{The web as platform for creation}
