--- a/tex/main/meaningfulComputation.tex
+++ b/tex/main/meaningfulComputation.tex
@@ -1,6 +1,30 @@
 \chapter{The Quest for Meaning in Video}
 \label{ch:quest}
 
+\section{Forms of Meaning in Film and Video}
+
+\subsection{Meaning in Visuals}
+\cite{Bruno:2002tt}
+
+\subsection{Meaning in Concept}
+\subsection{Meaning in Structure}
+[cite bordwell \& Thompson: analysis of context dependency]
+
+\subsection{Meaning in Annotations}
+\cite{Kuwano:2000wy}
+
+\section{Computational Undertakings of the Quest}
+
+\subsection{Steps towards Meaning: An Overview}
+
+Schematized summary of different steps:
+indexing
+automatic metadata
+annotating
+  Human-Driven Labeling
+  Machine-Driven Labeling
+multimodal feature fusion
+  
 
 
 \subsection{Indexing to enable search}
